// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sitewide Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="tertiary-nav dragscroll"
  >
    <div>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
    <div>
      <button
        className="pill secondary active"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                496,
                512,
                Array [],
                "f0ac",
                "M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z",
              ],
              "iconName": "globe",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
         Global
      </button>
    </div>
  </div>
  <small>
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f05a",
            "M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z",
          ],
          "iconName": "info-circle",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    <a
      href="https://listenbrainz.readthedocs.io/en/latest/general/data-update-intervals.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      How often are my stats updated?
    </a>
  </small>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release-group"
            range="week"
            terminology="album"
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
      />
    </ErrorBoundary>
  </section>
</div>
`;

exports[`User Stats UserReports renders without crashing 1`] = `
<div>
  <div
    className="tertiary-nav dragscroll"
  >
    <div>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        This Year
      </Pill>
      <Pill
        active={true}
        onClick={[Function]}
        type="secondary"
      >
        Last Week
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Month
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        Last Year
      </Pill>
      <Pill
        active={false}
        onClick={[Function]}
        type="secondary"
      >
        All time
      </Pill>
    </div>
    <div>
      <button
        className="pill secondary active"
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f007",
                "M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z",
              ],
              "iconName": "user",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
         
        test_user
      </button>
      <button
        className="pill secondary "
        onClick={[Function]}
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                496,
                512,
                Array [],
                "f0ac",
                "M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z",
              ],
              "iconName": "globe",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
         Global
      </button>
    </div>
  </div>
  <small>
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f05a",
            "M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z",
          ],
          "iconName": "info-circle",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
     
    <a
      href="https://listenbrainz.readthedocs.io/en/latest/general/data-update-intervals.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      How often are my stats updated?
    </a>
  </small>
  <section
    id="listening-activity"
  >
    <ErrorBoundary>
      <UserListeningActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="top-entity"
  >
    <div
      className="row"
    >
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="artist"
            range="week"
            terminology="artist"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="release-group"
            range="week"
            terminology="album"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
      <div
        className="col-md-4"
      >
        <ErrorBoundary>
          <UserTopEntity
            apiUrl="foobar"
            entity="recording"
            range="week"
            terminology="track"
            user={
              Object {
                "name": "test_user",
              }
            }
          />
        </ErrorBoundary>
      </div>
    </div>
  </section>
  <section
    id="daily-activity"
  >
    <ErrorBoundary>
      <UserDailyActivity
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
  <section
    id="artist-origin"
  >
    <ErrorBoundary>
      <UserArtistMap
        apiUrl="foobar"
        range="week"
        user={
          Object {
            "name": "test_user",
          }
        }
      />
    </ErrorBoundary>
  </section>
</div>
`;
